--- a/projfrontend/public/index.html
+++ b/projfrontend/public/index.html
@@ -23,6 +23,7 @@
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
     crossorigin="anonymous"
   />
+    <script data-ad-client="ca-pub-2137854737828188" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <title>Tshirt Store</title>
   </head>
   <body>
